src/scss/_style.scss
.compare-advanced-container  {
  width: 1266px;
  max-width: 100vw;
  margin-left: 50%;
  transform: translateX(-50%);
}

.compare-advanced-table {
  background: none;
  border-collapse: collapse;

  tbody {

    tr {
      
      &:first-child {

        th, td {
          background-color: #f8ebdf !important;
        }
      } 
    }
  }

  @media(max-width: 425px) {
    * {
      font-size: 10px !important;
    }

    img {
      max-width: 80% !important;
    }

    button {
      padding: 6px;
    }
  }

  .tooltip-contain-gallery {
    position: relative;
    width: 100%;

    .__icon-extra-gallery {
      position: absolute;
      right: 15px;
      top: calc(30% - 7px);
      width: 20px;
      line-height: 0;  

      svg {
        width: 100%;
      }
    }
  }

  p {
    font-family: var(--text-font);
    font-size: 16px;
  }

  .__icon-tooltip {
    cursor: pointer;
    position: absolute;
    right: 5px;
    top: 5px;

    svg {
      fill: white;
    }
  }

  .__product-brand {
    
    img {
      width: 150px;
      max-width: 90%;
      margin: 0 auto;
      display: inline-block;
    }
  }

  tbody {

    tr {
      &:first-child{
        background-color: #f8ebdf !important;
      }
      &:nth-child(odd){
        background: var(--row-color-second);
      }
      &:nth-child(even){
        background: var(--row-color-first);
      }
      > * {
        vertical-align: middle;
      }

      > *:last-child {
        // padding-right: 0;
        // min-width: 196px;
        .__entry-cell {

          &:after {
            // width: calc(100% - 4px) !important;
          }
        }
      }
    }

    td {
      text-align: center;
      position: relative;
      transition: all 1s ease;
      ul {
        text-align: left;

        li {
          margin-bottom: 0;
        }
      }

      .__entry-cell {
        display: flex;
        flex-direction: column;
        width: 100%;
        justify-content: center;
        align-items: center;
        min-height: 80px;
        padding: 10px 0;

        &:after {
          content: "";
          position: absolute;
          left: 4px;
          top: 0;
          width: calc(100% - 8px);
          height: 100%;
          background: #f5f5f5;
          z-index: 1;
        }

        > * {
          position: relative;
          z-index: 3;
        }

        .actions {
          display: flex;
          flex-direction: column;
          width: 100%;
          padding: 0 15%;
          box-sizing: border-box;
          background: white;
          
          &.is-top-sticky {
            box-shadow: 0px -11px 0 0 white, 0px 4px 8px 0px rgb(1 1 1 / 5%);
            z-index: 4;
          }

          button {
            margin-bottom: 9px;
            background: var(--button-color-ide);
            color: var(--button-color-text-ide);
            border-radius: 40px;
            transition: .3s ease;
            
            &:hover,
            &.__pinned {
              background: var(--button-color-hover);
              color: var(--button-color-text-hover);
            }
          }
        }
      }
    }

    th, td {
      border: none;
      padding: 0 4px;
      min-width: 192px;
    }

    *.__no-background {
      background: none !important;
    }

    th {
      color: white;
      text-align: center;
      position: relative;
    }

    tr:nth-child(odd) {

      th {
        background: var(--row-color-second);
      }

      td {
        background: var(--row-color-second);

        .__entry-cell {
          background: #F5F5F5;
        }
      }
    }
    
    tr:nth-child(even) {

      th {
        background: var(--row-color-first);
      }

      td {
        background: var(--row-color-first);

        .__entry-cell {
          background: white;

          &:after {
            background: white;
          }
        }
      }
    }

    tr:first-child { 

      td {
        background: none;

        .__entry-cell {
          background: white;
          border-radius: 16px 16px 0 0;

          &:after {
            background: none;
          }
        }
      }
    }
  }
}

.ca-image-block {
  position: relative;
  width: 100%;
  padding-bottom: 100%;
  border-radius: 16px;
  overflow: hidden;

  .image-layer {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;

    &:after {
      content: "";
      position: absolute;
      left: 0;
      top: 0;
      width: 100%;
      height: 100%;
      background: rgba(1,1,1,.4);
      opacity: 0;
      transition: .3s ease;
      -webkit-transition: .3s ease;
    }
  }

  &:hover {

    .image-layer {

      &:after {
        opacity: 1;
      }
    }
  }

  .ca-image-block--inner {
    position: absolute;
    width: 80%;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    -webkit-transform: translate(-50%, -50%);
    z-index: 3;
    display: flex;
    justify-content: center;
    align-items: center;

    a {
      color: #525252;
      display: inline-block;
      background: white;
      padding: 10px;
      border-radius: 16px;
    }
  }
}

.ca-blog-posts-block {

  ul {
    display: flex;
    flex-wrap: wrap;
    margin: 0 -20px;
    padding: 0;

    li {
      list-style: none;
      padding: 0 20px;
      box-sizing: border-box;
      width: calc(100% / 3);
      margin-bottom: 20px;

      @media(max-width: 600px) {
        width: calc(100% / 2);
      }

      @media(max-width: 425px) {
        width: calc(100% / 1);
      }

      .__thumb {
        display: block;
        width: 100%;

        img {
          width: 100%;
        }
      }

      .__title {
        font-size: 14px;

        a {
          color: black;
        }
      }
    }
  }
}

